kubernetes/template/service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: app-service
  name: app-service
spec:
  type: ClusterIP
  ports:
    - port: 80
      targetPort: 8501
      protocol: TCP
  selector:
    app: app-deployment
